--- a/price.html
+++ b/price.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Фитнес, клуб, Магнитогорск, здоровье, спорт, ЗОЖ">
     <link rel="stylesheet" href="static/styles/style.css">
     <link rel="shortcut icon" href="../static/images/favicon.png" type="image/x-icon">
-    <title>Прайс-лист</title>
+    <title>Лист Цен</title>
     <Style>
         a {
             text-decoration: none;
