--- a/calendar.html
+++ b/calendar.html
@@ -11,7 +11,7 @@
     <Style>
         a {
             text-decoration: none;
-            color: white;
+            color: rgb(168, 25, 128);
         }
     </Style>
 </head>
